--- a/COMP10050-assignment1/CMakeLists.txt
+++ b/COMP10050-assignment1/CMakeLists.txt
@@ -3,4 +3,4 @@ project(COMP10050_assignment1 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(COMP10050_assignment1 main.c mylib.c mylib.h)
+add_executable(COMP10050_assignment1 main.c mylib.c mylib.h help.c help.h)
